--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="row row-cols-1 row-cols-md-3">
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="lgbt-rainbow-flag.png" class="card-img-top" alt="lgbt-rainbow-flag">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Rainbow Flag</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
                     </div>
