Added flags and descriptions to the pride flag section.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,68 @@
                 <div class="row row-cols-1 row-cols-md-3">
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="lgbt-rainbow-flag.png" class="card-img-top" alt="lgbt-rainbow-flag">
+                      <img src="images/gilbert-baker-pride-flag.jpeg" class="card-img-top" alt="original-rainbow">
+                      <div class="card-body">
+                        <h5 class="card-title">Rainbow Flag-Original</h5>
+                        <p class="card-text">The original rainbow flag. Created in 1978 by Gilbert Baker and commissioned Harvey Milk.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col mb-4">
+                    <div class="card">
+                      <img src="images/pride-78-to-99.jpeg" class="card-img-top" alt="pride-78-to-99">
+                      <div class="card-body">
+                        <h5 class="card-title">Rainbow Flag, 1978-1999</h5>
+                        <p class="card-text">Flown beginning in 1978, its difference is that it is missing the hot pink stripe, which was due to a fabric shortage, and turquoise, which was omitted for color balance</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col mb-4">
+                    <div class="card">
+                      <img src="images/lgbt-rainbow-flag.png" class="card-img-top" alt="rainbow">
                       <div class="card-body">
                         <h5 class="card-title">Rainbow Flag</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">The most well-known pride flag, it is used to show that a home or business is a safe space. It omits the pink and turquoise used in Gilbert's designs for easier mass producion</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
+                    <div class="card">
+                      <img src="images/philadelphia-pride.png" class="card-img-top" alt="philly-pride">
+                      <div class="card-body">
+                        <h5 class="card-title">Philadelphia Pride</h5>
+                        <p class="card-text">Designed in 2017 to give representation to the unique challenges faced by the black and brown LGBT+ community</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col mb-4">
+                    <div class="card">
+                      <img src="images/poc-pride.png" class="card-img-top" alt="poc-pride">
+                      <div class="card-body">
+                        <h5 class="card-title">POC Pride Flag</h5>
+                        <p class="card-text">While the origins of this particular flag are unknown, it gained prominence during the 2020 protests and represents solidarity with the Black Lives Matter movement and the distinctive intersectionality between the queer and black communities.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col mb-4">
+                    <div class="card">
+                      <img src="images/progress-pride.png" class="card-img-top" alt="images/progress-pride.png">
+                      <div class="card-body">
+                        <h5 class="card-title">Progress Flag</h5>
+                        <p class="card-text">Created as a response to the Philadelphia Pride Flag, it also adds the colors of the trans pride flag.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col mb-4">
+                    <div class="card">
+                      <img src="images/intersex-progress.png" class="card-img-top" alt="intersex-progress">
+                      <div class="card-body">
+                        <h5 class="card-title">Progress Pride w/Intersex logo</h5>
+                        <p class="card-text">Similar to the Progress Pride Flag, it adds the logo for intersex individuals</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <div class="col mb-4">
                     <div class="card">
                       <img src="..." class="card-img-top" alt="...">
                       <div class="card-body">
@@ -45,31 +99,13 @@
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/pinktriangle.jpeg" class="card-img-top" alt="pink-triangle">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col mb-4">
-                    <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col mb-4">
-                    <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title">Pink Triangle Flag</h5>
+                        <p class="card-text">Once used as a symbol by the Nazis to denote homosexual people, similar to the yellow star with Jewish people during that same time period, it now serves as a representation that history will not repeat itself.</p>
                       </div>
                     </div>
                   </div>
