Added pictures and descriptions to thegender identity flag section.

--- a/index.html
+++ b/index.html
@@ -125,73 +125,69 @@
                 <div class="row row-cols-1 row-cols-md-3">
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/cis.jpeg" class="card-img-top" alt="images/cis.jpeg">
                       <div class="card-body">
                         <h5 class="card-title">Cisgender Flag</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Cisgender means identifying as the gender one was assigned at birth</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/trans.png" class="card-img-top" alt="trans">
                       <div class="card-body">
                         <h5 class="card-title">Transgender Flag</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Designed in 1999, it is designed to represent those whose gender identity is not the same as their assigned birth gender.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/enby.png" class="card-img-top" alt="enby">
                       <div class="card-body">
                         <h5 class="card-title">Nonbinary Flag</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Nonbinary is for those whose gender identity is beyond the gender binary (male or female).</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/genderfluid.png" class="card-img-top" alt="genderfluid">
                       <div class="card-body">
                         <h5 class="card-title">Genderfluid Flag</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">People who are genderfluid don't identify with one gender, but rather their gender identity shifts between male, female, or somewhere else on the spectrum. How often someone's identity shifts depends on the individual.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="">
+                      <img src="images/genderqueer.png" class="card-img-top" alt="genderqueer">
                       <div class="card-body">
                         <h5 class="card-title">Genderqueer Flag</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Genderqueer people are individuals who don't conform to society's ideas of how they should act or express themselves based on the gender they were assigned at birth. According to Psychology Today, “This may be in terms of their thoughts, feelings, behaviors, and, most importantly, their gender identity.”</p>
+                        <p class="card-text">Lavender: Represents androgyny
+
+                          White: Represents agender identities
+                          
+                          Green: Represents non-binary people</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/agender.png" class="card-img-top" alt="agender">
                       <div class="card-body">
                         <h5 class="card-title">Agender</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Agender means not idendtifying with any gender.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/intersex.png" class="card-img-top" alt="intersex">
                       <div class="card-body">
                         <h5 class="card-title">Intersex</h5>
-                        <p class="card-text"></p>
-                      </div>
-                    </div>
-                  </div>
-                <div class="col mb-4">
-                    <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Polysexual</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Intersex is for those whose bodies do not align under the gender binary (male or female). For example, someone who was born with both sets of genitalia or has various combinations of chromosomes</p>
                       </div>
                     </div>
                   </div>
