Added content to the pansexual and asexual cards.

--- a/index.html
+++ b/index.html
@@ -265,19 +265,28 @@
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="" class="card-img-top" alt="">
+                      <img src="images/pansexual.png" class="card-img-top" alt="pan">
                       <div class="card-body">
                         <h5 class="card-title">Pansexual</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Pansexual means attraction to all genders.</p>
                       </div>
                     </div>
                   </div>
                   <div class="col mb-4">
                     <div class="card">
-                      <img src="..." class="card-img-top" alt="...">
+                      <img src="images/asexual.png" class="card-img-top" alt="asexual">
                       <div class="card-body">
                         <h5 class="card-title">Asexual</h5>
-                        <p class="card-text"></p>
+                        <p class="card-text">Asexual is lack of sexual attraction to anyone.</p>
+                        <p class="card-text">
+                          The colors in the flag mean the following:
+                          <ul>
+                            <li>Black: Represents Asexuality as a whole</li>
+                            <li>Gray: Represents gray asexuality and demisexuality. Demisexuality is defined as no sexual attraction unless there is a strong emotional bond according to AVEN.</li>
+                            <li>White: Represents sexuality.</li>
+                            <li>Purple: Represents community</li>
+                          </ul>
+                        </p>
                       </div>
                     </div>
                   </div>
